--- a/TorboFile/View/Controls/MainViews/CustomSearch.xaml
+++ b/TorboFile/View/Controls/MainViews/CustomSearch.xaml
@@ -221,7 +221,7 @@
 						
 						<controls:ProgressControl Margin="4,0,4,0" DockPanel.Dock="Top"
                                   DataContext="{Binding CurrentProgress}"
-                                  Visibility="{Binding Path=Operation, Converter={StaticResource NonNullToVisible}}" />
+                                  Visibility="{Binding Path=IsRunning, Converter={StaticResource BoolVisibility}}" />
 
 						<ContentPresenter DockPanel.Dock="Bottom" Content="{Binding ResultsList}">
 							<ContentPresenter.ContentTemplate>
