--- a/TorboFile/View/Controls/ProgressControl.xaml
+++ b/TorboFile/View/Controls/ProgressControl.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
             d:DesignWidth="500">
 
-    <!-- Use with ProgressModel -->
+    <!-- Use with ProgressVM -->
 
     <StackPanel>
         <ProgressBar x:Name="MyProgressBar" HorizontalContentAlignment="Stretch"
