--- a/TorboFile/View/Controls/MainViews/CustomSearch.xaml
+++ b/TorboFile/View/Controls/MainViews/CustomSearch.xaml
@@ -35,8 +35,9 @@
 			<DataTemplate x:Key="conditionPicker" DataType="{x:Type matchmodel:ConditionPickerVM}">
 
 				<StackPanel Orientation="Horizontal">
-					<ComboBox Name="matchTypesDropDown" MinWidth="64" Margin="2"
+					<ComboBox Name="matchTypesDropDown" MinWidth="64" Margin="2"  PreviewMouseLeftButtonDown="ComboBox_PreviewMouseDown"
 						ItemsSource="{Binding AvailableTypes}" SelectedItem="{Binding CreateType}">
+
 						<ComboBox.ItemTemplate>
 							<DataTemplate DataType="{x:Type types:TypeDescription}">
 
@@ -56,7 +57,7 @@
 			<DataTemplate x:Key="actionPicker" DataType="{x:Type matchmodel:ActionPickerVM}">
 
 				<StackPanel Orientation="Horizontal">
-					<ComboBox Name="matchTypesDropDown" MinWidth="64" Margin="2"
+					<ComboBox Name="matchTypesDropDown" MinWidth="64" Margin="2" PreviewMouseLeftButtonDown="ComboBox_PreviewMouseDown"
 						ItemsSource="{Binding AvailableTypes}" SelectedItem="{Binding CreateType}">
 						<ComboBox.ItemTemplate>
 							<DataTemplate DataType="{x:Type types:TypeDescription}">
@@ -168,11 +169,11 @@
 				<DockPanel LastChildFill="False">
 
 
-					<StackPanel DockPanel.Dock="Bottom" Name="buttonPanel" Orientation="Horizontal" HorizontalAlignment="Right"
+					<StackPanel DockPanel.Dock="Top" Name="buttonPanel" Orientation="Horizontal" HorizontalAlignment="Left"
 					Grid.Row="1">
-						<Button Name="btnSave" Style="{StaticResource StdButton}" Content="Save Search"
+						<Button Name="btnSave" Style="{StaticResource StdButton}" Content="SAVE SEARCH"
 				Command="{Binding CmdSaveOperation}"/>
-						<Button Name="btnLoad" Style="{StaticResource StdButton}" Content="Load Search"
+						<Button Name="btnLoad" Style="{StaticResource StdButton}" Content="LOAD SEARCH"
 					Command="{Binding CmdLoadOperation}">
 						</Button>
 						<Button Name="btnRun" Style="{StaticResource StdButton}" Content="RUN SEARCH"
@@ -197,13 +198,20 @@
 
 				<Grid>
 					<Grid.RowDefinitions>
-						<RowDefinition Height="95*"/>
 						<RowDefinition Height="Auto"/>
+						<RowDefinition Height="95*"/>
 					</Grid.RowDefinitions>
 
 
-					<DockPanel DataContext="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=DataContext.RunSearchVM}">
-						
+					<StackPanel Name="btnPanel" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
+						<Button Name="btnEdit" Style="{StaticResource StdButton}" Content="EDIT SEARCH" Command="{Binding CmdEditSearch}">
+
+						</Button>
+					</StackPanel>
+					
+					<DockPanel Grid.Row="1"
+							   DataContext="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=DataContext.RunSearchVM}">
+
 						<StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
 							<Button x:Name="BtnDirectory" Style="{StaticResource StdButton}" MaxHeight="28" Command="{Binding CmdPickDirectory}">
 								<Image Source="/TorboFile;component/assets/images/folder-yellow_open.png"/>
@@ -218,7 +226,7 @@
 								APPLY ACTIONS
 							</Button>
 						</StackPanel>
-						
+
 						<controls:ProgressControl Margin="4,0,4,0" DockPanel.Dock="Top"
                                   DataContext="{Binding CurrentProgress}"
                                   Visibility="{Binding Path=IsRunning, Converter={StaticResource BoolVisibility}}" />
@@ -234,12 +242,6 @@
 						</ContentPresenter>
 					</DockPanel>
 
-					<StackPanel Name="btnPanel" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-						<Button Name="btnEdit" Style="{StaticResource StdButton}" Content="EDIT SEARCH" Command="{Binding CmdEditSearch}">
-
-						</Button>
-					</StackPanel>
-					
 				</Grid>
 
 			</DataTemplate>
